navbar and projects update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,23 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 import Navbar from '../components/Navbar.astro';
 ---
 
-<Layout title="Yerlin Rojas Space">
+<Layout title="YerlinSpace">
 
 		<main>
+	
 			<Navbar/>
+	
+	
+			
+	     
 		<p class="welcome">WELCOME</p>
 		</main>
 
 </Layout>
 
 <style>
-	main{
-		margin-top: 10%;
-	}
 	.welcome {
     font-size: 100px;
     font-family: fantasy;
