--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,16 +2,19 @@
 import Layout from "../layouts/Layout.astro";
 import Data from "../../public/data/data.json";
 import ProdCard from "../../src/components/ProdCard.astro";
+import Navbar2 from "../components/Navbar2.astro";
 const title = "Projects";
 
 const productos = Data;
 ---
 
 <Layout title={title}>
-    <div class="text-center my-6">
-        <h1 class="text-4xl font-bold">Projects</h1>
+    <div class="flex">
+        <Navbar2/>
     </div>
-    <main class="min-h-screen flex items-center justify-center">
+    <main class="min-h-screen flex items-center justify-center 
+    dark:bg-gray-900
+    ">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-4 max-w-screen-lg">
             {productos.map((dato) => (
                 <ProdCard 
