--- a/src/components/Navbar2.astro
+++ b/src/components/Navbar2.astro
@@ -2,12 +2,14 @@
 import { Image } from "astro:assets";
 import logo from "../../public/favicon5.svg";
 
+
 ---
 
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-<div class="w-full text-gray-800 bg-white dark:text-gray-200 dark:bg-gray-800 dark:bg-gradient-to-b from-gray-800 via-gray-900 to-black" 
-     style="box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);" 
+<div 
+class="w-full text-gray-800 bg-white dark:text-gray-200 dark:bg-gray-800 dark:bg-gradient-to-b from-gray-800 via-gray-900 to-black" 
+
      x-data="{ open: false }">
 
     <div class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row lg:px-8">
