--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
-import Navbar from '../components/Navbar.astro';
-
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
 }
@@ -9,7 +8,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -17,8 +16,9 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon5.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions/>
 	</head>
-	<body>
+	<body class="dark:bg-gradient-to-b dark:from-gray-800 dark:via-gray-900 dark:to-black">
 		<slot />
 	</body>
 </html>
