--- a/src/pages/aboutme.astro
+++ b/src/pages/aboutme.astro
@@ -12,8 +12,7 @@ const profile= Data;
 
 <Layout title={title}>
     <Navbar2/>
-<main class="min-h-screen flex items-center justify-center 
-dark:bg-gray-900">
+<main class="w-full min-h-screen dark:bg-gradient-to-b dark:from-gray-800 dark:via-gray-900 dark:to-black flex items-center justify-center">
 
 <div >
     {profile.map((dato) => (
