--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -22,7 +22,7 @@ const profiles: Profile[] = Data;
 const profile = profiles[0]; // Obtén el primer perfil (o el que necesites)
 const { photo, name, position, description, skills, rrss } = profile;
 ---
-<script is:inline src="../../src/js/aboutme.js"></script>
+<script is:inline src="../../js/aboutme.js"></script>
 
 <div class="relative h-auto">
     <!-- Photo -->
