--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -48,10 +48,10 @@ const { name, description,gif, image, git, demo } = product;
     <!-- Icons -->
     <div class="mt-8 flex justify-center space-x-4">
         <a href={demo} target="_blank">
-            <img src="/public/copiar-link.svg" alt="Website" class="w-8 h-8">
+            <img src="../../../public/copiar-link.svg" alt="Website" class="w-8 h-8">
         </a>
         <a href={git} target="_blank">
-            <img src="/public/github.svg" alt="GitHub" class="w-8 h-8">
+            <img src="../../../public/github.svg" alt="GitHub" class="w-8 h-8">
         </a>
     </div>
 </main>
