--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ const myFade = {
 
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-<div transition:animate={myFade} class="h-div w-full  md:h-64 lg:h-72 text-gray-800 bg-white dark:text-gray-200 dark:bg-gray-800 dark:bg-gradient-to-b from-gray-800 via-gray-900 to-black " 
+<div transition:animate={myFade} class="h-div w-full h-72 text-gray-800 bg-white dark:text-gray-200 dark:bg-gray-800 dark:bg-gradient-to-b from-gray-800 via-gray-900 to-black " 
      style="box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);" 
      x-data="{ open: false }">
   <div class="flex flex-col items-end justify-end max-w-screen-xl px-4 mx-auto lg:px-8 h-full ">
