--- a/src/components/ProdCard.astro
+++ b/src/components/ProdCard.astro
@@ -5,12 +5,16 @@ interface Props {
   name: string;
   description: string;
   image: string;
+  image1:string;
+  image2:string;
+  image3:string;
   gif:string;
+  cat:string;
   slug: string; // Add slug as a prop
 
 }
 
-const { name, description, image, slug,gif } = Astro.props;
+const { name, description, image, slug, gif, image1, image2, image3,cat } = Astro.props;
 ---
 <div  class="relative w-full max-w-sm bg-white shadow dark:bg-gray-900 dark:border-gray-700 overflow-hidden 
 hover:scale-105 transition-transform duration-300">
@@ -18,7 +22,7 @@ hover:scale-105 transition-transform duration-300">
   hover:opacity-100 transition-opacity duration-100">
     <div class="absolute inset-0 bg-transparent bg-opacity-75 backdrop-filter backdrop-blur-md p-4 rounded-lg text-center">
       <h5 class="text-xl font-medium mb-5 text-gray-700 dark:text-white">{name}</h5>
-      <a href={`/projects/${slug}`} class="mt-2 px-4 py-2 bg-transparent border border-gray-300 text-gray-300 rounded hover:bg-gray-900 
+      <a href={`/projects/graphic/${slug}`} class="mt-2 px-4 py-2 bg-transparent border border-gray-300 text-gray-300 rounded hover:bg-gray-900 
       dark:hover:bg-white dark:hover:text-gray-700
       ">
         More 
