--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -51,7 +51,7 @@ const myFade = {
                md:text-center 
                dark:text-white dark:hover:text-gray-500 dark:hover:border-b-4 transition-all duration-200 
                {{ currentPath === 'aboutme' ? 'active' : '' }}">
-       ABOUT ME
+       ABOUT
      </a>
         <a href="/contact"
         class="relative inline-block px-4 py-2 md:px-1 text-sm text-gray-800 border-b-2
