--- a/src/components/Navbar2.astro
+++ b/src/components/Navbar2.astro
@@ -24,7 +24,7 @@ import logo from "../../public/favicon5.svg";
     </div>
     <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow items-end pb-4 md:pb-0 md:flex md:justify-end md:flex-row md:gap-2">
       <a href="/aboutme" class="relative inline-block px-4 py-2 md:px-1 text-sm text-gray-800 lg:border-b-2 hover:text-gray-400 font-bold bg-transparent hover:border-b-4 transition-all duration-200 md:text-center dark:text-white dark:hover:text-gray-500 dark:hover:border-b-4 transition-all duration-200 {{ currentPath === 'aboutme' ? 'active' : '' }}">
-        ABOUT ME
+        ABOUT
       </a>
       <a href="/contact" class="relative inline-block px-4 py-2 md:px-1 text-sm text-gray-800 lg:border-b-2 hover:text-gray-400 font-bold bg-transparent hover:border-b-4 transition-all duration-200 md:text-center dark:text-white dark:hover:text-gray-500 dark:hover:border-b-4 transition-all duration-200 {{ currentPath === 'contact' ? 'active' : '' }}">
         CONTACT
